--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 body {
+    margin: 0;
+    padding: 0;
     font-family: Roboto, Arial, Helvetica, Sans-Serif;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,4 +18,10 @@ p {
     height: 100vh;
     display: flex;
     overflow-y: scroll;
+}
+
+img {
+    height: 100vh;
+    width: auto;
+    object-fit: contain;
 }
