--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,25 @@ p {
     max-width: 100vw;
     height: 100vh;
     display: flex;
+    position: fixed;
     overflow-y: scroll;
 }
 
-img {
+#backgroundImage {
+    z-index: -30;
     height: 100vh;
     width: auto;
     object-fit: contain;
+}
+
+#scrollableElement div {
+    position: absolute;
+}
+
+#faq {
+    left: 3200px;
+}
+
+#schedule {
+    left: 4100px;
 }
