scroll to feature

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ p {
     margin: 0.5em;
 }
 
+p:hover{
+    color: white
+}
+
 #scrollableElement {
     max-width: 100vw;
     height: 100vh;
@@ -33,6 +37,14 @@ p {
 }
 
 /* IMPORTANT: Use vh for positioning so that it will adapt to different screen sizes! */
+#nav {
+    left: 0vh;
+    width: fit-content;
+    height: 100vh;
+    background-color: hotpink;
+    text-align: center;
+}
+
 #faq {
     left: 450vh;
 }
