--- a/css/styles.css
+++ b/css/styles.css
@@ -36,15 +36,36 @@ body {
     background-color: hotpink;
     text-align: center;
     position: fixed; /* Set the navbar to fixed position */
-     z-index: 1;
+    z-index: 1;
 }
 
 #nav p {
-    margin: 0.5em;
+    margin: 1.5em;
 }
 
 #nav p:hover{
-    color: white
+    color: white;
+    animation: pulse 1s;
+    transition: 1s;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    80% {
+        transform: scale(.75);
+    }
+    100% {
+        transform: scale(1.5);
+    }
+}
+
+#title {
+    left: 0vh;
 }
 
 #faq {
