--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
     overflow-y: scroll;
 }
 
+img {
+    margin-right: 2vh;
+    width: 40vh;
+}
+
 #backgroundImage {
     z-index: -30;
     height: 100vh;
@@ -72,20 +77,19 @@ body {
     left: 0vh;
 }
 
+#about {
+    top: 5vh;
+    left: 200vh;
+    width: 31vh;
+    text-align: center;
+}
+
 #faq {
     top: 5vh;
     left: 420vh;
     width: 40vw;
     text-align: center;
 }
-
-#about {
-    top: 5vh;
-    left: 200vh;
-    width: 20%;
-    text-align: center;
-}
-
 
 #faq ul {
     list-style-type: none;
@@ -101,6 +105,24 @@ body {
 #schedule {
     top: 5vh;
     left: 590vh;
+    text-align: center;
+}
+
+#members {
+    top: 5vh;
+    left: 670vh;
+    text-align: center;
+}
+
+#sponsor {
+    top: 39vh;
+    left: 670vh;
+    text-align: center;
+}
+
+#socials {
+    top: 68vh;
+    left: 670vh;
     text-align: center;
 }
 
