--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/* Color variables */
+:root {
+    --color_button_background: hotpink;
+    --color_button_text: black;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -12,6 +18,15 @@ body {
 #scrollableElement {
     max-width: 100vw;
     height: 100vh;
+    display: flex;
+    position: fixed;
+    overflow-y: scroll;
+}
+
+.nonScrollableElement {
+    background-color: rgba(0, 0, 0, 0.1);
+    max-height: 85vh;
+    width: 100%;
     display: flex;
     position: fixed;
     overflow-y: scroll;
@@ -95,17 +110,31 @@ img {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    width: 97%;
 }
 
 .faqButton {
     width: 100%;
-    margin-bottom: 2vh;
+    margin-bottom: 1.75vh;
 }
 
 #schedule {
     top: 5vh;
     left: 590vh;
     text-align: center;
+}
+
+.faqButton, .scheduleButton {
+    background-color: var(--color_button_background);
+    color: var(--color_button_text);
+    border: none;
+    border-radius: 12px;
+    padding: 0.25em 0.5em;
+}
+
+.faqButton:hover, .scheduleButton:hover {
+    background-color: var(--color_button_text);
+    color: var(--color_button_background);
 }
 
 #members {
@@ -129,6 +158,6 @@ img {
 /* Special styling for smaller screens only */
 @media all and (max-width: 768px) {
     #faq {
-        width: 70vw;
+        width: 65vw;
     }
 }
