--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,14 @@ img {
     color: var(--color_background);
 }
 
+#about .verticalScrollElement {
+    max-height: 40vh;
+}
+
+#about p {
+    width: 95%;
+}
+
 #faq {
     top: 5vh;
     left: 280vh;
