FAQ scroll area update

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ img {
 
 #faq {
     top: 5vh;
-    left: 280vh;
+    left: 265vh;
     width: 55vw;
     text-align: center;
 }
@@ -120,6 +120,10 @@ img {
     margin: 0 auto;
     padding: 0;
     width: 95%;
+}
+
+#faq .verticalScrollElement{
+    max-height: 45vh;
 }
 
 .faqButton {
