--- a/css/styles.css
+++ b/css/styles.css
@@ -197,14 +197,14 @@ img {
 }
   
 @keyframes run {
-    0% {left: 10vw; top: 0vh; transform: rotate(0deg);}
-    15% {left: 10vw; top: 90vh; transform: rotate(360deg);}
-    20% {left: 12vw; top: 85vh; transform: rotate(360deg);}
-    25% {left: 14vw; top: 90vh; transform: rotate(360deg);}
-    30% {left: 16vw; top: 90vh; transform: rotate(360deg);}
-    50% {left: 90vw; top: 90vh; transform: rotate(360deg);}
-    75% {left: 90vw; top: 0vh; transform: rotate(180deg);}
-    100% {left: 10vw; top: 0vh; transform: rotate(180deg);}
+    0% {left: 10vw; top: -2.5vh; transform: rotate(0deg) scale(.5);}
+    15% {left: 10vw; top: 90vh; transform: rotate(360deg) scale(1);}
+    20% {left: 12vw; top: 85vh; transform: rotate(360deg) scale(1);}
+    25% {left: 14vw; top: 90vh; transform: rotate(360deg) scale(1);}
+    30% {left: 16vw; top: 90vh; transform: rotate(360deg) scale(1);}
+    50% {left: 90vw; top: 90vh; transform: rotate(360deg) scale(1);}
+    75% {left: 90vw; top: -2.5vh; transform: rotate(180deg) scale(.5);}
+    100% {left: 10vw; top: -2.5vh; transform: rotate(180deg) scale(.5);}
   }
 
 /* Special styling for larger screens only */
