--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-flow: column;
+    background-color: #9981aa;
 }
 
 #scrollableElement {
